--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -32,6 +32,23 @@ body {
   }
 }
 
-.panel-p-default{
-  @apply py-1 px-4
+.panel-p-default {
+  @apply py-1 px-4;
+}
+
+.scrollbar-thin {
+  scrollbar-width: thin;
+}
+
+.scrollbar-thumb-mocha-surface2::-webkit-scrollbar-thumb {
+  background-color: #585b70;
+  border-radius: 6px;
+}
+
+.scrollbar-track-mocha-surface0::-webkit-scrollbar-track {
+  background-color: #313244;
+}
+
+.scrollbar-thin::-webkit-scrollbar {
+  width: 6px;
 }
